	PR ld/13683 	* ldlang.c (lang_process): Rerun lang_do_assignments before 	starting garbage collection. 	* ldexp.c (fold_name): Generate a reloc for defined symbols 	found without an associated output section during the mark phase. 	(exp_fold_tree_1): Continue processing an expression, even if we 	are unable to fold it, if we are in the first two evaluation 	phases. 	* ldexp.h (enum lang_phase_type): Add descriptions of the phases.

* ld-gc/pr13683.c: New test source file.
	* ld-gc/pr13683.d: New test control and output file.
	* ld-gc/gc.exp: Run the pr13683 test.

	* ld-cris/tls-gc-68: Update expected symbol table dump.
	* ld-cris/tls-gc-69: Likewise.
	* ld-cris/tls-gc-70: Likewise.
	* ld-cris/tls-gc-71: Likewise.
	* ld-cris/tls-gc-75: Likewise.
	* ld-cris/tls-gc-76.d: Likewise.
	* ld-cris/tls-gc-79.d: Likewise.